<resources>
    <string name="app_name">口岸木材人</string>

    <string name="main_home">首页</string>
    <string name="main_message">消息</string>
    <string name="main_published">发布</string>
    <string name="main_mine">我</string>

    <!--首页上面8个按钮-->
    <string name="Railway_goods">铁路到货</string>
    <string name="find_goods">智能找货</string>
    <string name="wood_info">木材咨讯</string>
    <string name="volume_calculate">材积计算</string>
    <string name="unsold_market">未售市场</string>
    <string name="wood_find">木材求购</string>
    <string name="nice_shops">精品店铺</string>
    <string name="more_functions">更多功能</string>

    <string name="text_nzh">满洲里</string>
    <string name="text_erenhot">二连浩特</string>
    <string name="text_suifenhe">绥芬河</string>

    <string name="toolbar_text">详细信息</string>
    <string name="wood_find_info">求购信息</string>
    <string name="text_paoma">1 %1$s = %2$s 人民币&#160;&#160;&#160;&#160;&#160;1 %3$s = %4$s 人民币&#160;&#160;&#160;&#160;&#160;1 %5$s = %6$s 人民币&#160;&#160;&#160;&#160;&#160;1 %7$s = %8$s 人民币 </string>


    <string name="no_request">不限</string>
    <string name="check_more">查看更多</string>
    <string name="search_hint">请输入车皮号/手机号</string>


    <string name="error_network">网络错误, 请检查网络设置</string>
</resources>
