<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include
        layout="@layout/partial_action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <FrameLayout
        android:id="@+id/head_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/tool_bar"
        android:layout_weight="1">

        <android.support.v4.view.ViewPager
            android:id="@+id/home_viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"/>


    </FrameLayout>

    <com.jywy.woodpersons.base.SimpleSearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_36"
        android:layout_marginBottom="1dp"
        android:layout_marginRight="14dp"
        android:gravity="center"/>
    <!--8个按钮-->
    <include
        layout="@layout/layout_eight_textview"
        android:layout_width="match_parent"
        android:layout_height="200dp"/>

    <TextView
        android:id="@+id/tvM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:drawableLeft="@mipmap/ic_launcher"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="跑马灯  跑马灯  跑马灯   跑马灯   跑马灯   跑马灯   跑马灯   跑马灯"/>

    <!--未售市场-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/unsold_market"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="关注:"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="今日点击："/>

        </LinearLayout>

        <!--<android.support.v7.widget.RecyclerView-->
        <!--android:id="@+id/unsold_RecyclerView"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"/>-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_more"/>
    </LinearLayout>

    <!--木材求购-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/wood_find"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="right"
                android:text="更多"/>

        </LinearLayout>

        <!--<android.support.v7.widget.RecyclerView-->
        <!--android:id="@+id/woodfind_RecyclerView"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"/>-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_more"/>
    </LinearLayout>

    <!--店铺列表-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/nice_shops"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="right"
                android:text="更多"/>

        </LinearLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_more"/>
    </LinearLayout>

</LinearLayout>